--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+
+.mainContainer {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.5fr 1.2fr 1.2fr 1.2fr 1.2fr 0.5fr;
+  grid-template-areas:
+    'heading heading'
+    'cardDiv platesDiv'
+    'trexDiv platesDiv'
+    'trexDiv platesDiv'
+    'trexDiv scoreBoardDiv'
+    'footer footer';
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.heading {
+  grid-area: heading;
+
+  border: solid 1px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardDiv {
+  grid-area: cardDiv;
+
+  border: solid 1px black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.trexDiv {
+  grid-area: trexDiv;
+  border: solid 1px black;
+}
+
+.platesDiv {
+  grid-area: platesDiv;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.plate {
+  height: 8rem;
+  width: 12rem;
+  border: solid 1px black;
+  border-radius: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.scoreBoardDiv {
+  grid-area: scoreBoardDiv;
+  border: solid 1px black;
+}
+
+footer {
+  grid-area: footer;
+  border: solid 1px black;
 }
