--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,12 @@
   border-radius: 50%;
 }
 
+.drumStick {
+  height: .5em;
+  width: .5em;
+  margin: .3em;
+  background: red
+}
 
 .scoreBoardDiv {
   grid-area: scoreBoardDiv;
