got refs to work with right elements, added trex component

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,9 @@
 
 .trexDiv {
   grid-area: trexDiv;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   border: solid 1px black;
 }
 
