changed to conditionally render diff component for level 2, added message that auto closes

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,16 @@
   border: solid 1px black;
 }
 
+/* ======== MODAL STUFF ======= */
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
 footer {
   grid-area: footer;
   border: solid 1px black;
