--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@
   background-color: rgba(0,0,0,.8)
 }
 
-.modalBackgroundCorrect {
+.modalContainerNoBackground {
   position: fixed;
   top: 0;
   left: 0;
