--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,17 @@
 
 }
 
+.answerBubbleContainer {
+    position:relative;
+    margin-left: 10%;
+    width: 100%;
+    height: 100%;
+}
+
 .answerBubble {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 75%;
   height: 75%;
   background-color: #f9fcf0;
@@ -57,6 +67,17 @@
   color: #111d9c;
   text-shadow: 1px 1px 1px #00d2f7;
   animation: fadeIn1 1s;
+}
+
+#answerBubbleTriangle {
+  position: absolute;
+  top: 65%;
+  right: 45%;
+  width: 0;
+  height: 0;
+  border-left: -1rem solid transparent;
+  border-right: 3rem solid transparent;
+  border-top: 4rem solid #f9fcf0;
 }
 
 .trexDiv {
