--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,18 @@
   background-color: rgba(255,255,255,.4)
 }
 
+.youWinModalBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: pink
+}
+
 .modalContainerNoBackground {
   position: fixed;
   top: 0;
